--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- G Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QQ9SDKFHZS"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX'); // Replace with your actual Measurement ID
+        gtag('config', 'G-QQ9SDKFHZS'); 
     </script>
     
     <style>
